--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mailgun-js": "^0.22.0"
+  },
+  "scripts": {
+    "build": "npm run build"
   }
 }
